[project]
name = "e2e-rag-with-deep-seek-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-ollama>=0.2.3",
    "pdfplumber>=0.11.5",
    "pyarrow>=19.0.0",
]
