[project]
name = "e2e-rag-with-deep-seek-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-huggingface>=0.1.2",
    "pdfplumber>=0.11.5",
    "pyarrow>=19.0.0",
    "pypdf>=5.3.0",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.0",
]
